# Ghostorshell

./: .gitignore  .replit  ai_detector.py  app.py  create_sample_docx.py  database.py  demo_detector.py  file_processor.py  git_commands.txt  pyproject.toml  replit.md  sample_document.docx  sample_image.py  sample_text.txt  visitor_tracking.py
