[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.88.0",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.0",
]
